# smooth_projects

./: readme.txt
AnalysisTemplate/: tutorial_commands.sh
AnalysisTemplate/figs/YvsY/: YvsY.py
AnalysisTemplate/figs/figdata/: observable_info.txt  prior_info.txt
AnalysisTemplate/figs/fitpercent/: fitpercent.py
AnalysisTemplate/figs/posterior/: posterior.py
AnalysisTemplate/figs/resolvingpower/: RP.py
AnalysisTemplate/smooth_data/Info/: experimental_info.txt  observable_info.txt  prior_info.txt
AnalysisTemplate/smooth_data/MCMC_trace/: CovThetaTheta.txt  CovThetaTheta_eigenvals.txt  CovThetaTheta_eigenvecs.txt  ResolvingPower.txt  Xtrace.txt  trace.txt  xbar_thetabar.txt
AnalysisTemplate/smooth_data/Options/: emulator_options.txt  mcmc_options.txt  tpo_options.txt
AnalysisTemplate/smooth_data/figs/: observable_info.txt
AnalysisTemplate/smooth_data/output_stuff/: fitpercentage.txt  sigmalambda.txt
AnalysisTemplate/smooth_data/trainingpoint_data/: Sigma2vsLambda.txt  Sigma2vsNPars.txt  Sigma2vsNTrain.txt  Sigma2vsNTrain_Latin.txt
doc/User_Manual/: UserManual.tex  emulator.tex  fullmodel.tex  installation.tex  pca.tex  simplex.tex  tutorial.tex
ekakshlocal/main_programs/: smoothy_calcobs_main.cc
ekakshrun/: CMakeLists.txt  coultest.cc  fakemodcls.cc  fakemodel.cc  keepscore.cc  simplextest.cc  smoothmain.cc  smoothy.cc  smoothy_writecoefficients.cc  try1.cc
ekakshrun/fakemodels/: fake1.cc
ekakshrun/figs/: onepartest.py
ekakshrun/modelruns/run0/: obs.txt
ekakshrun/modelruns/run1/: mod_parameters.txt  obs.txt
ekakshrun/modelruns/run2/: obs.txt
ekakshrun/modelruns/run3/: mod_parameters.txt  obs.txt
ekakshrun/modelruns/run4/: obs.txt
ekakshrun/parameters/: emulator_parameters.txt  emulator_parameters_test.txt  simplex_parameters_test.txt
erenlocal/main_programs/: smoothy_tune_main.cc
erenrun/: CMakeLists.txt
erenrun/Info/: observable_info.txt
erenrun/parameters/: emulator_parameters.txt
fake/figs/YvsY/: YvsY_2panel.py
fakerhic/: smoothy_emulate.py
fakesmooth/: NParsNObs.txt  fakeinfo.cc  fakeinfo_gaussianprior.cc  fullmodeltester.sh  runner.sh  sigmatester.sh
fakesmooth/figs/YvsY/: YvsY.py  YvsY_Lambda5.py
jetscape/Info/: experimental_info.txt  modelpar_info.txt  observable_info.txt
jetscape/parameters/: emulator_parameters.txt  mcmc_parameters.txt
mylocal/software/: CMakeLists.txt
mylocal/software/MainPrograms/: smoothy_calcobs_main.cc  smoothy_mcmc_main.cc  trainingpoint_optimizer_main.cc
mylocal/software/TutorialPrograms/: fakefullmodel.cc  fakeinfo.cc
mylocal/software/fakefullmodels/: fake.cc  fakerhic.cc  fakesmooth.cc
mylocal/software/main_programs/: optimizeRGauss_MC1.cc  optimizeRGauss_MC2.cc  optimizeRGauss_MC3.cc  optimize_MC.cc  simplex_optimize_main.cc  simplex_setRGauss_main.cc  smoothy_calcobs_main.cc  smoothy_logP_main.cc  smoothy_mcmc_main.cc  smoothy_surmise_calcobs_main.cc  smoothy_testsigma_main.cc  smoothy_testvsfullmodel_main.cc  smoothy_testvsfullmodelalt_main.cc  smoothy_tune_main.cc  smoothy_vslambda_main.cc  trainingpoint_optimizer_main.cc
mylocal/software/pybind_stuff/: CMakeLists.txt  pybind_main.cc  smoothy_emulate.py
mylocal/software/pybindstuff/: smoothy_emulate.py
optimizeRGauss/: IabTester.cc  IabTesterGauss.cc  IabTesterUniform.cc  NParsNObs.txt  fakeinfo.cc  fakeinfo_gaussianprior.cc
rhic/Info/: experimental_info.txt
rhic/PCA_Info/: experimental_info.txt  observable_info.txt  transformation_info.txt
rhic/parameters/: emulator_parameters.txt
scottlocal/fakemodels/: CMakeLists.txt  fakerhic.cc  fakesmooth.cc
scottlocal/main_programs/: CMakeLists.txt  mcmc_main.cc  mcmc_metropolis_main.cc  pca_calctransformation_main.cc  pca_readinfo_calcy_main.cc  simplex_main.cc  smoothy_calcobs_main.cc  smoothy_readcoefficients_main.cc  smoothy_test_main.cc  smoothy_train_test_main.cc  smoothy_tune_main.cc
scottlocal/software/: CMakeLists.txt
scottrandom/: fakeinfo.cc
scottrandom/Info/: experimental_info.txt  modelpar_info.txt  observable_info.txt
scottrandom/figs/: fullvsemulator.py
scottrandom/parameters/: emulator_parameters.txt  simplex_parameters.txt
scottrun/: CMakeLists.txt
scottrun/Info/: experimental_info.txt  experimental_info_pca.txt  observable_info.txt  pca_info.txt
scottrun/coefficients/length/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt
scottrun/coefficients/mass/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt
scottrun/coefficients/time/: meta.txt  sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt
scottrun/figs/testresults_NTrain2/: real0.txt  real1.txt  real2.txt  real3.txt  real4.txt  real5.txt  real6.txt  real7.txt  real8.txt  real9.txt
scottrun/modelruns/run0/: mod_parameters.txt  obs.txt  pca_obs.txt
scottrun/modelruns/run1/: obs.txt  pca_obs.txt
scottrun/modelruns/run2/: mod_parameters.txt  obs.txt  pca_obs.txt
scottrun/modelruns/run3/: obs.txt  pca_obs.txt
scottrun/modelruns/run4/: mod_parameters.txt  obs.txt  pca_obs.txt
scottrun/parameters/: emulator_parameters.txt
surmise_devel/: TrainingObs.txt  TrainingSigmaY.txt  TrainingThetas.txt
tests/: CMakeLists.txt  coffee.cpp  coffee1.cpp  coffee2.cpp  funcs.cc  keepscore.cc  obs_test1.cc  obs_test2.cc  obs_test2.cpp  tea.cc
tests/Info/: mod_parameters_info.txt  model_param_info  model_parameters_info.cpp  observable_info  observable_info.cpp  observable_info.txt
tests/fakeModel/: fakeModel.cc
tests/modelruns/run0/: mod_parameters.txt  obs.txt
tests/modelruns/run1/: mod_parameters.txt  obs.txt
tests/modelruns/run2/: mod_parameters.txt  obs.txt
tests/modelruns/run3/: mod_parameters.txt  obs.txt
tests/modelruns/run4/: mod_parameters.txt  obs.txt
tests/modelruns/run5/: mod_parameters.txt  obs.txt
tests/modelruns/run6/: mod_parameters.txt  obs.txt
tests/modelruns/run7/: mod_parameters.txt  obs.txt
tests/modelruns/run8/: mod_parameters.txt  obs.txt
tests/parameters/: parameters.txt
(+5415 files in other folders)
