cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
set(CMAKE_VERBOSE_MAKEFILE on)
project(smooth_projects)
set(GITHOME_MSU_PRATT $ENV{GITHOME_MSU_PRATT})
set(GITHOME_BAND_SMOOTH $ENV{GITHOME_BAND_SMOOTH})
set (MAIN_PROGRAM_DIR ".")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "../bin")

add_custom_target(extern_commonutils COMMAND make WORKING_DIRECTORY ${GITHOME_MSU_PRATT}/commonutils/software)
add_custom_target(extern_smooth COMMAND make WORKING_DIRECTORY ${GITHOME_BAND_SMOOTH}/software)

set(CMAKE_CXX_FLAGS "-W -Wall -march=native -std=c++17 -O2")
set(CMAKE_MODULE_PATH "${MAIN_PROGRAM_DIR}/cmake")
find_package(GSL REQUIRED)
find_package(Eigen3 REQUIRED)
include_directories(SYSTEM ${GSL_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} ${GITHOME_MSU_PRATT}/commonutils/software/include ${GITHOME_BAND_SMOOTH}/software/include)      
link_directories(${GITHOME_BAND_SMOOTH}/software/lib ${GITHOME_MSU_PRATT}/commonutils/software/lib)

find_library(${GITHOME_MSU_PRATT}/commonutils/software/lib msu_commonutils)
find_library(${GITHOME_BAND_SMOOTH}/software/lib smooth)

#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/simplex_main.cc)
add_executable(simplex ${MAIN_PROGRAM_DIR}/simplex_main.cc)
add_dependencies(simplex extern_smooth extern_commonutils)
target_link_libraries(simplex ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/smoothy_tune_main.cc)
add_executable(smoothy_tune ${MAIN_PROGRAM_DIR}/smoothy_tune_main.cc)
add_dependencies(smoothy_tune extern_smooth extern_commonutils)
target_link_libraries(smoothy_tune ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/smoothy_readcoefficients_main.cc)
add_executable(smoothy_readcoefficients ${MAIN_PROGRAM_DIR}/smoothy_readcoefficients_main.cc)
add_dependencies(smoothy_readcoefficients extern_smooth extern_commonutils)
target_link_libraries(smoothy_readcoefficients ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/pca_calctransformation_main.cc)
add_executable(pca_calctransformation ${MAIN_PROGRAM_DIR}/pca_calctransformation_main.cc)
add_dependencies(pca_calctransformation extern_smooth extern_commonutils)
target_link_libraries(pca_calctransformation ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/pca_readinfo_calcy_main.cc)
add_executable(pca_readinfo_calcy ${MAIN_PROGRAM_DIR}/pca_readinfo_calcy_main.cc)
add_dependencies(pca_readinfo_calcy extern_smooth extern_commonutils)
target_link_libraries(pca_readinfo_calcy ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/smoothy_calcobs_main.cc)
add_executable(smoothy_calcobs ${MAIN_PROGRAM_DIR}/smoothy_calcobs_main.cc)
add_dependencies(smoothy_calcobs extern_smooth extern_commonutils)
target_link_libraries(smoothy_calcobs ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/smoothy_test_main.cc)
add_executable(smoothy_test ${MAIN_PROGRAM_DIR}/smoothy_test_main.cc)
add_dependencies(smoothy_test extern_smooth extern_commonutils)
target_link_libraries(smoothy_test ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################
set(SOURCE_FILES ${MAIN_PROGRAM_DIR}/mcmc_metropolis_main.cc)
add_executable(mcmc_metropolis ${MAIN_PROGRAM_DIR}/mcmc_metropolis_main.cc)
add_dependencies(mcmc_metropolis extern_smooth extern_commonutils)
target_link_libraries(mcmc_metropolis ${GITHOME_BAND_SMOOTH}/software/lib/libsmooth.a  ${GITHOME_MSU_PRATT}/commonutils/software/lib/libmsu_commonutils.a ${GSL_LIBRARY} ${GSL_CBLAS_LIBRARY} ${EIGEN3_LIBRARY})
#################################################

